# owl

./: .commands  .gitignore  Cargo.toml  LICENSE  OPCODES.md  README.md  alloc.c  alloc.h  build.zig  build.zig.zon  code.c  code.h  demo.lua  evaluator.c  evaluator.h  gc.c  gc.h  intrinsics.c  intrinsics.h  meson.build  objects.c  objects.h  owl.c  owl.nimble  strings.c  strings.h
docs/: features.md  ideas.md  language.md  owl.md  syntax-prototyping.md  syntax.md  tasks.md  tour.md
editors/nvim/: README.md
lib/: core.owl
scripts/: a.owl  cli.owl  demo.owl  hello-world.owl  prelude.owl  repl.owl  repl2.owl  rpg.owl  terminal.owl
scripts/imports/: a.owl  b.owl
scripts/tasks/: task.owl  tasks.owl
src/:  logger.zig  ast.zig  ast_dot.zig  ast_tests.zig  base.zig  compiler.lua  env_tests.zig  evaluation.nim  evaluation.zig  evaluation2.zig  evaluation2_tests.zig  evaluation_tests.zig  evaluator.zig  garbage.zig  gc.zig  gc_tests.zig  grammar.pest  lib.rs  libraries.nim  main.rs  main.zig  modules.zig  objects.nim  owl.lua  owl.nim  reader.lua  reader.nim  reader.zig  reader2.zig  reader2_tests.zig  reader_tests.zig  reading.zig  reading_test.zig  repr.lua  terminal.zig  tester.lua  tests.zig  tokenizer.zig  value.zig  value_tests.zig  (+1 more)
src/env/: mod.rs
src/evaluator/: eval.rs  intrinsic.rs  mod.rs  prelude.rs
src/lib/: core.owl  prelude.zig
src/parser/: grammar.pest  mod.rs  owl.pest
syntax/: s-exprs.pest
tests/: parser.rs  testEvaluation  testEvaluation.nim  testLexer.nim  test_eval.c  test_gc.c  test_objects.c  test_strings.c  transpiler.rs
(+11 files in other folders)
